Adding vendor naics disclaimer text to the vendor page template.

--- a/app/discovery/templates/vendor.html
+++ b/app/discovery/templates/vendor.html
@@ -97,6 +97,10 @@
             <div tabindex="0" id="all_contracts_button" class="contracts_button" title="load this vendor's contract history for all past contracts in the table below">All Contracts</div>
         </div><!-- end vendor_contract_history_title_container -->
 
+        <div id="vendor_disclaimers">
+          <span class="admin_label">Work performed by a vendor is often reported under a different NAICS code due to FPDS restrictions.  Select 'All Contracts' to see other contract work performed by the vendor.</span>
+        </div>
+
         <div id="ch_table" class="contracthistory">
             <table id="vendor_contracts">
                 <tr>
