--- a/app/discovery/static/discovery_site/css/layouts/blog.css
+++ b/app/discovery/static/discovery_site/css/layouts/blog.css
@@ -1573,3 +1573,22 @@ img.green_dot {
   height: 1px;
   overflow: hidden;
 }
+
+.table_wrapper {
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+.loading:before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 100;
+  min-height: 100px;
+  background: rgba(0,0,0,0.3) center center no-repeat url(../../images/loading.gif);
