Updating contract button and NAICS table column in the vendor template.

--- a/app/discovery/templates/vendor.html
+++ b/app/discovery/templates/vendor.html
@@ -93,7 +93,7 @@
         <div id="vendor_contract_history_title_container">
             <span class="vendor_contract_history_text"></span>
             <!-- <span class="vendor_contract_history_naics"></span> -->
-            <div tabindex="0" id="naics_contracts_button" class="contracts_button" title="load this vendor's contract history for this NAICS in the table below">NAICS 12345</div>
+            <div tabindex="0" id="naics_contracts_button" class="contracts_button" title="load this vendor's contract history for this NAICS in the table below">NAICS</div>
             <div tabindex="0" id="all_contracts_button" class="contracts_button" title="load this vendor's contract history for all past contracts in the table below">All Contracts</div>
         </div><!-- end vendor_contract_history_title_container -->
 
@@ -126,8 +126,8 @@
                         <th scope="col" class="h_status arrow-sortable sortable" title="Select to sort" tabindex="0">
                             Status
                         </th>
-                        <th scope="col" class="h_naics">
-                            NAICS
+                        <th scope="col" class="h_codes">
+                            Codes
                         </th>
                     </tr>
                 </table>
