Swapping out contract location for point of contact email (if exists) in the vendor template.

--- a/app/discovery/templates/vendor.html
+++ b/app/discovery/templates/vendor.html
@@ -117,8 +117,8 @@
                         <th scope="col" class="h_type arrow-sortable sortable" title="Select to sort" tabindex="0">
                             Type
                         </th>
-                        <th scope="col" class="h_location arrow-sortable sortable" title="Select to sort" tabindex="0">
-                            Location
+                        <th scope="col" class="h_poc arrow-sortable sortable" title="Select to sort" tabindex="0">
+                            Point of Contact
                         </th>
                         <th scope="col" class="h_value arrow-sortable sortable" title="Select to sort" tabindex="0">
                             Value ($)
