--- a/app/discovery/templates/base.html
+++ b/app/discovery/templates/base.html
@@ -38,6 +38,7 @@
         </script>
         {% endblock %}
 
+        <link rel="stylesheet" href="{% static 'discovery_site/css/jquery-ui.min.css' %}">
         <link rel="stylesheet" href="{% static 'discovery_site/css/pure-release-0.5.0/pure-min.css' %}">
         <link rel="stylesheet" href="{% static 'discovery_site/css/pure-release-0.5.0/base-min.css' %}">
         <link rel="stylesheet" href="{% static 'discovery_site/css/select2.css' %}">
