Adding hover text for contract count in the pool template vendor table headers.

--- a/app/discovery/templates/pool.html
+++ b/app/discovery/templates/pool.html
@@ -41,7 +41,7 @@
                         Location
                     </th>
                     <th scope="col" class="h_naics_results arrow-down sortable" title="Sorted descending">
-                        Contracts
+                        <span title="Contract count for work performed under the selected NAICs codes over the last 10 years">Contracts</span>
                     </th>
                     <th scope="col" class="h_8a">
                         8(a)
