--- a/app/discovery/static/discovery_site/css/layouts/discovery.css
+++ b/app/discovery/static/discovery_site/css/layouts/discovery.css
@@ -222,7 +222,7 @@ h4.data {
 
 #combined_search {
     width: 1100px;
-    min-height: 209px;
+    min-height: 230px;
     padding-top: 15px;
     margin-left: auto;
     margin-right: auto;
@@ -284,6 +284,16 @@ h4.data {
     background-repeat: no-repeat;
     background-position: 0 0;
     width: 417px;
+}
+
+#zone_select {
+    margin-top: 15px;
+}
+
+.zone_select_style {
+    color: #bfbfbf;
+    height: 26px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .select_text {
