Updating the Google Analytics id.

--- a/app/discovery/templates/base.html
+++ b/app/discovery/templates/base.html
@@ -162,7 +162,7 @@
           // forces TLS even if the page were somehow loaded over http://
           ga('set', 'forceSSL', true);
 
-          ga('create', 'UA-48605964-16', 'auto');
+          ga('create', 'US-48605964-16', 'auto');
           ga('send', 'pageview');
 
         </script>
