--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -17,7 +17,7 @@
                         <li>Specifically designed for the acquisition of professional services</li>
                         <li>Enables the use of ANY contract type</li>
                         <li>All vendors have DCAA-vetted financial systems</li>
-                        <li><a href="https://www.gsa.gov/cdnstatic/NAICS%20Code%20Definitions%20for%20OASIS.pdf" target="_blank">Download the NAICS description document showing NAICS Codes per pool</a></li>
+                        <li><a href="https://www.gsa.gov/cdnstatic/NAICS%20Code%20Definitions%20for%20OASIS.pdf" target="_blank" rel="noopener noreferrer">Download the NAICS description document showing NAICS Codes per pool</a></li>
                         <li><a class="learn_more" href="https://www.gsa.gov/acquisition/products-services/professional-services/one-acquisition-solution-for-integrated-services-oasis">Learn more about OASIS</a></li>
                     </ul>
                 </div>
@@ -28,7 +28,7 @@
                         <li>Provides a regionally focused pool of highly qualified large and small contractors</li>
                         <li>Allows flexibility for contract types, including fixed price, labor hour, time and materials, and hybrids</li>
                         <li>Leverages spend in acquiring services in an effective, economical, and expedient manner resulting in both significant cost and time savings</li>
-                        <li><a class="bmo_descriptions" href="{% static 'discovery_site/files/BMO_Phase_II_Service_Category_Descriptions.pdf' %}" target="_blank">BMO Phase II Service Category Descriptions</a></li>
+                        <li><a class="bmo_descriptions" href="{% static 'discovery_site/files/BMO_Phase_II_Service_Category_Descriptions.pdf' %}" target="_blank" rel="noopener noreferrer">BMO Phase II Service Category Descriptions</a></li>
                         <li><a class="learn_more" href="https://www.gsa.gov/acquisition/purchasing-programs/federal-strategic-sourcing-initiative/building-maintenance-and-operations)">Learn more about BMO</a></li>
                     </ul>
                 </div>
@@ -61,7 +61,7 @@
                 <span id="data_source_date_sam"></span>
                 <span id="data_source_last_updated">last updated</span>
                 <span id="data_source_description_sam" class="data_source_description">We pull SAM data directly from the System for Award Management (SAM) to provide supplemental information on all of the vendors on the included contracts, including their SAM registration date, any potential suspensions or debarments, and the NAICS codes that a vendor may contract under. Set aside information is based on contract awarded designations and may not be consistent with the current SAM registration. Contract awarded designations are valid for the term of the contract.</span>
-                <div id="data_source_dialog_sam_wrapper"><div id="data_source_dialog_sam" style="display: none"><span>Contractors are required to re-certify size/socioeconimic at least annually in SAM in accordance with <a href="https://www.acquisition.gov/sites/default/files/current/far/html/Subpart%204_12.html#wp1073667" target="_blank">FAR 4.120(b)(1)</a>. Contrast that with the contract frequency every five years (or Novation/merger) in accordance with <a href="https://www.acquisition.gov/sites/default/files/current/far/html/52_217_221.html#wp1139913" target="_blank">FAR 52.219-28</a>. Hence the size/socioeconomic status shown in SAM may differ from the contract and thus cannot be relied upon for orders issued under the contract which default to the size/socioeconomic status in the contract. Refer to the contract vehicle website to determine the current size/socioeconomic status of a particular contractor under that contract vehicle. )</span></div></div>
+                <div id="data_source_dialog_sam_wrapper"><div id="data_source_dialog_sam" style="display: none"><span>Contractors are required to re-certify size/socioeconimic at least annually in SAM in accordance with <a href="https://www.acquisition.gov/sites/default/files/current/far/html/Subpart%204_12.html#wp1073667" target="_blank" rel="noopener noreferrer">FAR 4.120(b)(1)</a>. Contrast that with the contract frequency every five years (or Novation/merger) in accordance with <a href="https://www.acquisition.gov/sites/default/files/current/far/html/52_217_221.html#wp1139913" target="_blank">FAR 52.219-28</a>. Hence the size/socioeconomic status shown in SAM may differ from the contract and thus cannot be relied upon for orders issued under the contract which default to the size/socioeconomic status in the contract. Refer to the contract vehicle website to determine the current size/socioeconomic status of a particular contractor under that contract vehicle. )</span></div></div>
             </div><!-- end data_sources_row -->
 
             <div id="data_source_fpds"  class="data_sources_row">
