--- a/app/discovery/templates/vendor.html
+++ b/app/discovery/templates/vendor.html
@@ -21,7 +21,7 @@
 
     <div id="vendor_title_status_container">
         <div class="vendor_title"></div>
-        <div class="vendor_website"><a id="vendor_site_link" target="_blank" href="#">vendor website</a></div>
+        <div class="vendor_website"><a id="vendor_site_link" target="_blank" href="#" rel="noopener noreferrer">vendor website</a></div>
         <div class="debarred_status"> &lt;&lt;&lt; WARNING: DEBARRED!</div>
     </div><!-- end vendor_title_status_container -->
 
