--- a/app/discovery/static/discovery_site/css/layouts/discovery.css
+++ b/app/discovery/static/discovery_site/css/layouts/discovery.css
@@ -1223,7 +1223,6 @@ img.green_dot {
     -moz-border-radius: 5px;
     border-radius: 5px;
     padding: 0 10px;
-    display: inline-block;
     font-family: arial;
     font-size: 14px;
     line-height: 30px;
@@ -1241,7 +1240,6 @@ img.green_dot {
     -moz-border-radius: 5px;
     border-radius: 5px;
     padding: 0 10px;
-    display: inline-block;
     font-family: arial;
     font-size: 14px;
     line-height: 30px;
@@ -1263,6 +1261,23 @@ img.green_dot {
     -moz-box-shadow: 0 1px 5px 0 #808080 inset;
     box-shadow: 0 1px 5px 0 #808080 inset;
 }
+
+#pool_filter_display {
+  display: inline;
+  padding-left: 5px;
+}
+#pool_filter_display #pool_filter {
+  margin: 5px;
+}
+#pool_filter_display span {
+  width: 100%;
+  text-align: right;
+  margin: 5px;
+  font-family: 'Raleway';
+  font-weight: 300;
+  font-size: 1em;
+}
+
 
 #vendor_disclaimers .admin_label {
   margin-top: 10px;
@@ -1338,8 +1353,6 @@ img.green_dot {
 .vendor_detail_table tr:first-child td:last-child {
     border-width: 0 0 1px 1px;
 }
-
-
 
 
 /* Contract History Styles */
