Adding the Professional Services option to the search_base template.

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -15,6 +15,7 @@
                     <option value="hcats">HCATS Unrestricted</option>
                     <option value="bmo_sb">BMO SB</option>
                     <option value="bmo">BMO Unrestricted</option>
+                    <option value="pss">Professional Services</option>
                 </select>
             </form>
         </div><!-- end vehicle_select -->
