--- a/app/discovery/templates/pool.html
+++ b/app/discovery/templates/pool.html
@@ -8,7 +8,7 @@
 {% block search_info %}
 
         <div id="results_pool_names">
-            <span class="results_pool_search">Search results for:</span><br>
+            <span class="results_pool_search">Vendor results from:</span><br>
             <div class="results_pool_names"></div>
 
             <div id="number_of_results">
