Adding PSS overview and updating other homepage content.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -7,7 +7,7 @@
             <h1>About Discovery</h1>
 
             <h3>Discovery</h3>
-            <p class="about_discovery_text">Discovery is a market research tool for GSA Contract Vehicles. Currently, it features GSA IDIQ vehicles, with more contracts coming in the future. Use Discovery to search vendor history for the awarded contractors and NAICs of the various IDIQs. Each contract is separated into Unrestricted and Small Business (SB) to make it easy to reserve task orders for small business categories.</p>
+            <p class="about_discovery_text">Discovery is a market research tool for GSA Contract Vehicles. Currently, it features GSA IDIQ vehicles, with more contracts coming in the future. Use Discovery to search vendor history for the awarded contractors and NAICs of the various IDIQs. Some contracts are separated into Unrestricted and Small Business (SB) based on their contract structure. For all other contracts, you can apply small business filters to narrow your results based on any set aside needs you have.</p>
 
             <h3>Contract Vehicles</h3>
             <div id="discovery_vehicles" class="about_discovery_text collapse-container">
@@ -42,12 +42,20 @@
                         <li><a class="learn_more" href="https://www.gsa.gov/hcats">Learn more about HCaTS</a></li>
                     </ul>
                 </div>
+                <h1 class="vehicle"><span class="arrow-d"></span>Professional Services Schedule (<b>PSS</b>)</h1>
+                <div>
+                    <ul class="attr">
+                        <li>Allows use of streamlined procurement procedures in FAR Subpart 8.4 Federal Supply Schedules</li>
+                        <li>Provides direct access to simple or complex fixed-price or labor-hour professional services</li>
+                        <li>Offers federal agencies access to more than 3,300 experienced contractors</li>
+                        <li><a class="learn_more" href="https://www.gsa.gov/acquisition/products-services/professional-services/professional-services-schedule-pss">Learn more about PSS</a></li>
+                    </ul>
+                </div>
             </div>
 
             <h3>What are Pools?</h3>
             <ul class="about_discovery_text">
                 <li>Discovery’s IDIQs are divided into functional categories that are referred to as pools</li>
-                <li>Each pool is it’s own IDIQ contract: Therefore you may only publish a solicitation to one of these categories</li>
                 <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool</li>
             </ul>
         </div><!-- end about_discovery -->
