Updating the vendor pool filter/contact label text in the vendor template.

--- a/app/discovery/templates/vendor.html
+++ b/app/discovery/templates/vendor.html
@@ -60,7 +60,7 @@
             </div><!-- end vendor_socioeconomic_table_container -->
 
             <div id="vendor_contact_table_container">
-                <div class="vendor_contact_label">Pool Membership</div>
+                <div class="vendor_contact_label">Choose one or more to show only contract history for that selection</div>
                 <div class="vendor_detail_table">
                     <form id="contract_pool_filters" title="Contract pool filters">
                         <table id="contact_details">
