--- a/app/discovery/templates/vendor.html
+++ b/app/discovery/templates/vendor.html
@@ -124,8 +124,12 @@
             <div tabindex="0" id="all_contracts_button" class="contracts_button" title="load this vendor's contract history for all past contracts in the table below">All Contracts</div>
         </div><!-- end vendor_contract_history_title_container -->
 
+        <div id="number_of_results">
+            <span class="matching_your_search"></span>
+        </div><!-- end number_of_results -->
+
         <div id="vendor_disclaimers">
-          <span class="admin_label">Work performed by a vendor is often reported under a different NAICS code due to FPDS restrictions.  Select 'All Contracts' to see other contract work performed by the vendor.</span>
+            <span class="admin_label">Work performed by a vendor is often reported under a different NAICS code due to FPDS restrictions.  Select 'All Contracts' to see other contract work performed by the vendor.</span>
         </div>
 
         <div id="ch_table" class="contracthistory">
