--- a/app/discovery/templates/pool.html
+++ b/app/discovery/templates/pool.html
@@ -11,7 +11,7 @@
             <span class="results_pool_search">Vendor results from:</span><br>
             <div class="results_pool_names"></div>
 
-            <div id="result_pool_spacer"/>
+            <div id="result_pool_spacer"></div>
 
             <div id="number_of_results">
                 <span class="matching_your_search"></span>
