Changing pool name table header label to Vehicles in the pool template.

--- a/app/discovery/templates/pool.html
+++ b/app/discovery/templates/pool.html
@@ -40,7 +40,7 @@
                         <span title="Contract count for work performed under the selected NAICs codes over the last 10 years">Contracts</span>
                     </th>
                     <th scope="col" class="h_vendor_pools">
-                        Pools
+                        Vehicles
                     </th>
                     <th scope="col" class="h_8a">
                         8(a)
