Updating the vendor list table column widths in the Discovery CSS.

--- a/app/discovery/static/discovery_site/css/layouts/discovery.css
+++ b/app/discovery/static/discovery_site/css/layouts/discovery.css
@@ -1014,12 +1014,12 @@ img.green_dot {
 
 #pool_table .h_vendor_name {
     text-align: left;
-    width: 420px;
+    width: 335px;
 }
 
 #pool_table .h_naics_results {
     text-align: left;
-    width: 160px;
+    width: 125px;
 }
 
 #pool_table .vendor_name {
@@ -1028,11 +1028,16 @@ img.green_dot {
 
 #pool_table .h_vendor_location {
     text-align: left;
-    width: 177px;
+    width: 130px;
 }
 
 #pool_table .vendor_location {
     text-align: left;
+}
+
+#pool_table .h_vendor_pools {
+    text-align: left;
+    width: 170px;
 }
 
 #pool_table .pooldetail .vendor_name tr:hover th {
